unpackaged/main/default/objects/Spend_Band__c/Spend_Band__c.object-meta.xml
<CustomObject>
    <description>Spend band ranges for customers.</description>
    <label>Spend Band</label>
    <nameField>
        <label>Spend Band</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Spend Bands</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>