unpackaged/main/default/objects/Spend_Band__c/fields/Max_Amount__c.field-meta.xml
<CustomField>
    <fullName>Max_Amount__c</fullName>
    <description>Max Spend Band Spend Amount, populated from Commercial Pricing System</description>
    <label>Max Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>