unpackaged/main/default/objects/Spend_Band__c/fields/Min_Amount__c.field-meta.xml
<CustomField>
    <fullName>Min_Amount__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>spend band min amount</description>
    <label>Min Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>