unpackaged/main/default/objects/Spend_Band__c/fields/Spend_Band_ID__c.field-meta.xml
<CustomField>
    <fullName>Spend_Band_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Spend Band ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>